# Django

./: asad.txt  pyproject.toml
blog/: views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: base.html  post_add.html  post_delete_confirm.html  post_detail.html  post_edit.html  post_list.html  post_publish.html
