[tool.poetry]
name = "djangogirls"
version = "0.1.0"
description = ""
authors = ["hyeonggeun2 <dhgudrms12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "<3.0"
notebook = "^6.4.1"
pillow = "^7.0.0"
django-extensions = "^2.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
